fix lang switcher styles on small screens

--- a/_src/styl/layout.styl
+++ b/_src/styl/layout.styl
@@ -67,7 +67,11 @@
 
         > li.lang
             float right
+            clear right
             font-size 0.8em
+
+            @media all and (min-width: 25em)
+                clear none
 
             a
                 text-decoration underline
